<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textViewFuelAmount"
        android:layout_width="127dp"
        android:layout_height="29dp"
        android:layout_gravity="center_vertical"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:text="@string/text_view_fuel_amount"
        android:textSize="18sp"
        app:layout_constraintStart_toEndOf="@+id/editTextFuelAmount"
        app:layout_constraintTop_toBottomOf="@+id/textViewFuelPrice" />

    <ImageButton
        android:id="@+id/buttonTensUp"
        android:layout_width="44dp"
        android:layout_height="42dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="20dp"
        android:contentDescription="@string/up_arrow"
        android:src="@drawable/uparrow"
        app:layout_constraintEnd_toStartOf="@+id/buttonDigitsUp"
        app:layout_constraintTop_toBottomOf="@+id/editTextOdometer" />

    <ImageButton
        android:id="@+id/buttonTensDown"
        android:layout_width="44dp"
        android:layout_height="42dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="20dp"
        android:contentDescription="@string/down_arrow"
        android:src="@drawable/downarrow"
        app:layout_constraintEnd_toStartOf="@+id/buttonDigitsDown"
        app:layout_constraintTop_toBottomOf="@+id/buttonTensUp" />

    <ImageButton
        android:id="@+id/buttonDigitsUp"
        android:layout_width="44dp"
        android:layout_height="42dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="480dp"
        android:contentDescription="@string/up_arrow"
        android:src="@drawable/uparrow"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/editTextFuelPrice"
        app:layout_constraintTop_toBottomOf="@+id/editTextOdometer" />

    <ImageButton
        android:id="@+id/buttonDigitsDown"
        android:layout_width="44dp"
        android:layout_height="42dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:contentDescription="@string/down_arrow"
        android:src="@drawable/downarrow"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonDigitsUp" />

    <Button
        android:id="@+id/buttonEnterFillUpDetails"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/button_enter_fuel_log"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonChangeDriver" />

    <Button
        android:id="@+id/buttonFuelLog"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:text="@string/button_fuel_log"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonEnterFillUpDetails" />

    <Button
        android:id="@+id/buttonMaintenance"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:text="@string/button_maintenance"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonFuelLog" />

    <Button
        android:id="@+id/buttonVehicles"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:text="@string/button_vehicles"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonMaintenance" />

    <Button
        android:id="@+id/buttonDrivers"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/button_drivers"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonVehicles" />

    <TextView
        android:id="@+id/textViewVehicle"
        android:layout_width="93dp"
        android:layout_height="48dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:text="@string/text_view_vehicle"
        android:textAlignment="center"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewTotal" />

    <TextView
        android:id="@+id/textViewDriver"
        android:layout_width="93dp"
        android:layout_height="46dp"
        android:layout_gravity="center_vertical"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:text="@string/text_view_driver"
        android:textAlignment="center"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewVehicle" />

    <Button
        android:id="@+id/buttonChangeVehicle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="56dp"
        android:layout_marginEnd="108dp"
        android:text="@string/button_vehicles"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textViewTotal"
        app:layout_constraintTop_toBottomOf="@+id/textViewFuelAmount" />

    <Button
        android:id="@+id/buttonChangeDriver"
        android:layout_width="151dp"
        android:layout_height="46dp"
        android:layout_marginStart="44dp"
        android:layout_marginTop="8dp"
        android:text="@string/button_drivers"
        android:textSize="24sp"
        app:layout_constraintStart_toEndOf="@+id/textViewDriver"
        app:layout_constraintTop_toBottomOf="@+id/buttonChangeVehicle" />

    <EditText
        android:id="@+id/editTextOdometer"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="9dp"
        android:layout_marginBottom="13dp"
        android:digits="0123456789"
        android:ems="10"
        android:inputType="number"
        android:textAlignment="textEnd"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/buttonDigitsUp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="packed" />

    <EditText
        android:id="@+id/editTextFuelPrice"
        android:layout_width="141dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="207dp"
        android:digits="0123456789"
        android:ems="10"
        android:inputType="numberDecimal"
        android:textSize="24sp"
        app:layout_constraintEnd_toStartOf="@+id/buttonDigitsUp"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintHorizontal_chainStyle="spread_inside"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextOdometer" />

    <EditText
        android:id="@+id/editTextFuelAmount"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="213dp"
        android:digits="0123456789"
        android:ems="10"
        android:inputType="numberDecimal"
        android:textSize="24sp"
        app:layout_constraintEnd_toStartOf="@+id/buttonDigitsDown"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextFuelPrice" />

    <TextView
        android:id="@+id/textViewTotal"
        android:layout_width="129dp"
        android:layout_height="36dp"
        android:layout_gravity="center_vertical"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="15dp"
        android:digits="0123456789."
        android:ems="10"
        android:inputType="numberDecimal"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="@+id/editTextFuelAmount"
        app:layout_constraintEnd_toStartOf="@+id/buttonChangeVehicle"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextFuelAmount" />

    <TextView
        android:id="@+id/textViewFuelPrice"
        android:layout_width="114dp"
        android:layout_height="28dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:text="@string/text_view_fuel_price"
        android:textSize="18sp"
        app:layout_constraintStart_toEndOf="@+id/editTextFuelPrice"
        app:layout_constraintTop_toBottomOf="@+id/editTextOdometer" />

</android.support.constraint.ConstraintLayout>